Confuged basic logging

--- a/REST API Coding Task/appsettings.Development.json
+++ b/REST API Coding Task/appsettings.Development.json
@@ -1,8 +1,34 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss zzz} [{Level}] (Thread:{ThreadId} Process:{ProcessId} Version:{Version}): {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "Path": "c:\\logs\\test-solution\\rest-coding-task\\rest-coding-task.log",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Debug",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss zzz} [{Level}] (Thread:{ThreadId} Process:{ProcessId} Version:{Version}): {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithThreadId",
+      "WithProcessId",
+      "WithExceptionDetails"
+    ],
+    "Properties": {
+      "Application": "AuthorizationService",
+      "Environment": "Development"
+    },
+    "AllowedHosts": "*"
   }
 }
