--- a/RestCT.BusinessLogic/RestCT.BusinessLogic.csproj
+++ b/RestCT.BusinessLogic/RestCT.BusinessLogic.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RestCT.DataAccess\RestCT.DataAccess.csproj" />
     <ProjectReference Include="..\RestCT.Shared\RestCT.Shared.csproj" />
   </ItemGroup>
